<resources>
    <string name="app_name">IUNI社区</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="save">保存</string>
    <string name="finish">完成</string>
    <string name="unbind">未绑定</string>
    <string name="uncreate">未创建</string>
    <string name="update_success">修改成功</string>
    <string name="aurora_paste">粘贴</string>
    <string name="aurora_selectAll">全选</string>
    <string name="aurora_select">选择</string>
    <string name="aurora_cut">剪切</string>
    <string name="aurora_copy">复制</string>
    <string name="aurora_inputMethod">输入法</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新</string>
    <string name="xlistview_header_hint_loading">正在刷新...</string>
    <string name="xlistview_header_last_time">上次更新：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_load_finish">已全部加载</string>
    <string name="xlistview_footer_hint_ready">松开加载</string>
    <string name="xlistview_footer_hint_loading">正在加载...</string>
    <string name="dialog_confirm">确定</string>
    <string name="dialog_cancel">取消</string>
    <string name="dialog_prompt">提示</string>
    <string name="no_connection_prompt">"网络异常，点击重新加载"</string>
    <string name="network_not_available">无网络，请打开网络连接</string>
    <string name="network_exception">网络异常，请重试</string>
    <string name="network_error_please_try_again_later">网络异常，请稍候重试</string>
    <string name="load_verify_code_error">加载验证码失败，点击重新加载</string>
    <string name="sd_space_not_enough">SD卡即将存满，请先清理再执行本操作</string>
    <string name="sdcard_not_mounted">SD卡不存在，请插入SD卡。</string>
    <string name="upload_pic_err_msg">服务器没有响应</string>
    <string name="upload_pic_too_large">图片过大，无法上传</string>
    <string name="upload_pic_fail">图片上传失败</string>
    <string name="main_homepage">首页</string>
    <string name="main_homepage_header_new_to_app">新手入门</string>
    <string name="main_homepage_header_sign_daily">每日签到</string>
    <string name="main_homepage_dialog_exit_tips">确定要退出程序吗？</string>
    <string name="main_forum">板块</string>
    <string name="forum_list">板块列表</string>
    <string name="main_find">发现</string>
    <string name="find_iuni_shop">官网商城</string>
    <string name="find_service_center">服务中心</string>
    <string name="find_qq">QQ在线客服</string>
    <string name="find_call_phone">拨打热线 400-866-6210</string>
    <string name="find_feedback">反馈意见</string>
    <string name="main_personal">我的</string>
    <string name="login">登录</string>
    <string name="login_title">随你而变，有备无患</string>
    <string name="login_content">个人中心帮你安全同步联系人、短信，你的数据永不丢失，换手机迁移数据一步到位。</string>
    <string name="login_description">一个账号，便可使用IUNI所有服务。</string>
    <string name="login_account_hint">手机号/邮箱/用户名</string>
    <string name="login_pwd_hint">密码</string>
    <string name="login_vc_code_hint">验证码</string>
    <string name="login_login_btn">登录</string>
    <string name="login_register">立即注册</string>
    <string name="login_register_vertical_sep">|</string>
    <string name="find_pwd">找回密码</string>
    <string name="login_on_logining">正在登录...</string>
    <string name="login_confirm_reserve_local_data">检测到您切换帐号了，是否要保留原帐号的本地数据？</string>
    <string name="login_confirm_reserve">保留</string>
    <string name="login_confirm_not_reserve">不保留</string>
    <string name="login_clear_local_data_on_going">正在切换帐号，请稍候...</string>
    <string name="login_error_account_cannot_be_empty">请输入账号</string>
    <string name="login_error_account_format_invalid">请输入有效的账号</string>
    <string name="login_error_pwd_cannot_be_empty">请输入密码</string>
    <string name="login_error_vccode_cannot_be_empty">请输入验证码</string>
    <string name="login_error_acc_or_pwd_incorrect">帐号或密码错误</string>
    <string name="login_error_email_acc_not_active">邮箱未激活</string>
    <string name="login_error_vc_code_incorrect">验证码错误</string>
    <string name="login_error_unknow">登录失败，请重试</string>
    <string name="register_title">注册IUNI账号</string>
    <string name="register_by_phonenum">用手机号注册</string>
    <string name="register_by_email">用邮箱注册</string>
    <string name="register_recommend">（推荐）</string>
    <string name="register_tips">个人账号绑定手机号或邮箱，能快速找回密码</string>
    <string name="register_by_phonenum_title">登录信息1/2</string>
    <string name="register_please_input_phonenum">请输入手机号</string>
    <string name="register_please_input_pwd">请输入密码</string>
    <string name="register_password_tips">为了你的账号安全，密码不少于8位数，至少由数字＋字母组合，字母区分大小写</string>
    <string name="register_next">下一步</string>
    <string name="register_verify_phonenum_tips">验证码已发送到%1$s，若120秒内未收到短信，请重新获取验证码。</string>
    <string name="register_verify_phonenum_title">验证手机2/2</string>
    <string name="register_get_again">重新获取</string>
    <string name="register_verification_code">短信验证码</string>
    <string name="register_user_agreement_tips1">注册账号即表示我同意IUNI云服务</string>
    <string name="register_user_agreement_tips2">《用户协议》</string>
    <string name="register_user_agreement_tips3">。</string>
    <string name="register_account_info_title">账户信息3/3</string>
    <string name="register_create_nickname">创建昵称</string>
    <string name="register_save">保存</string>
    <string name="register_error_phonenum_cannot_be_empty">请输入手机号</string>
    <string name="register_error_phonenum_format_invalid">请输入正确的手机号</string>
    <string name="register_error_pwd_cannot_less_than_8">密码不少于8位数</string>
    <string name="register_error_pwd_cannot_be_empty">请输入密码</string>
    <string name="register_error_pwd_format_invalid">密码至少是字母+数字组成</string>
    <string name="register_error_verifycode_cannot_be_empty">请输入正确的验证码</string>
    <string name="register_getting_verify_code">正在获取验证码</string>
    <string name="register_get_verify_code_success">已发送验证码</string>
    <string name="register_get_verify_code_fail">获取手机验证码失败</string>
    <string name="register_is_being_registered">正在注册</string>
    <string name="register_success">注册成功</string>
    <string name="register_fail">注册失败</string>
    <string name="register_countries_and_regions">国家和地区</string>
    <string name="register_search_countries_and_regions">搜索国家和地区</string>
    <string name="register_please_input_email">请输入正确的邮箱账号</string>
    <string name="register_input_email">请输入邮箱账号</string>
    <string name="register_email_format_invalid">请输入正确的邮箱账号</string>
    <string name="register_sending_email_verify">正在发送邮箱验证</string>
    <string name="register_please_visit_mailbox">请访问邮箱</string>
    <string name="register_click_the_link">点击邮件中的链接激活账户</string>
    <string name="register_re_registration">重新注册</string>
    <string name="register_re_send_email_verify">重发邮箱验证邮件</string>
    <string name="register_resending_email_verify">正在重发验证邮件</string>
    <string name="register_get_email_verify_success">已发送验证邮件</string>
    <string name="register_check_email_finish">验证完成</string>
    <string name="register_get_email_verify_fail">发送验证邮件失败</string>
    <string name="register_email_account_title">账户激活2/2</string>
    <string name="register_error_ercode_error">验证码错误</string>
    <string name="register_error_phonenum_already_register">该手机号已被注册，可直接登录</string>
    <string name="register_error_email_already_register">邮箱地址已被绑定</string>
    <string name="register_verifying_email">正在验证邮箱...</string>
    <string name="register_please_login_email_to_finish">请登录邮箱完成验证</string>
    <string name="register_verifying_email_error">验证邮箱出错</string>
    <string name="register_error_vccode_cannot_be_empty">请输入验证码</string>
    <string name="register_code_error_send_msg_frequent">发送短信过于频繁</string>
    <string name="register_user_agreement">用户协议</string>
    <string name="email_tips">温馨提示：若未能收到邮件，请到“垃圾邮箱”中检查。</string>
    <string name="account_info_title">个人资料</string>
    <string name="account_info_account_info">账号信息</string>
    <string name="account_info_account_id">账户ID</string>
    <string name="account_info_account_nickname">昵称</string>
    <string name="account_info_account_pwd">密码</string>
    <string name="account_info_account_phone">手机</string>
    <string name="account_info_account_email">邮箱</string>
    <string name="account_info_storage">存储空间</string>
    <string name="account_info_storage_total">总容量</string>
    <string name="account_info_storage_available">可用容量</string>
    <string name="account_info_logout">退出登录</string>
    <string name="account_info_get_user_info">正在获取账户信息...</string>
    <string name="account_info_set_icon_title">设置图像</string>
    <string name="account_info_wait_logout">正在注销...</string>
    <string name="account_info_retry">重试</string>
    <string name="account_info_confirm_logout">确定中断同步并注销？</string>
    <string name="account_info_error_photo_file_not_exist">修改图像失败，请重试</string>
    <string name="account_info_error_falied_to_crop">裁剪图像失败，请重试</string>
    <string name="account_info_error_upload_photo_failed">上传图像失败</string>
    <string name="account_info_error_download_icon_falied">下载图像失败</string>
    <string name="account_info_error_load_icon_falied">加载图像失败</string>
    <string name="account_info_error_falied_to_logout">注销失败</string>
    <string name="account_sync_error_failed_to_get_info">获取用户信息失败</string>
    <string name="set_nick_title">修改昵称</string>
    <string name="set_nick_name_hint">请输入昵称</string>
    <string name="set_nick_error_name_is_empty">昵称不能为空</string>
    <string name="set_nick_error_name_length_invalid">昵称长度为6~20个字符</string>
    <string name="set_nick_saving">正在保存...</string>
    <string name="set_nick_success">昵称修改成功</string>
    <string name="set_nick_tips">昵称30天内仅能修改一次</string>
    <string name="set_nick_error">修改失败，请重试</string>
    <string name="set_nick_error_nick_invalid">无效的昵称，包含敏感词</string>
    <string name="set_nick_error_nick_already_exist">昵称已存在</string>
    <string name="set_nick_error_nick_update_frequently">昵称修改太频繁</string>
    <string name="change_pwd_title">更改密码</string>
    <string name="change_pwd_old_pwd_hint">输入旧密码</string>
    <string name="change_pwd_new_pwd_hint">输入新密码</string>
    <string name="change_pwd_success">密码修改成功</string>
    <string name="change_pwd_error_old_pwd_is_empty">旧密码不能为空</string>
    <string name="change_pwd_error_old_pwd_incorrect">旧密码错误</string>
    <string name="change_pwd_error_failed_to_save">修改密码失败，请重试</string>
    <string name="change_pwd_error_vccode_cannot_be_empty">请输入验证码</string>
    <string name="validate_pwd_title_phone">更改绑定手机1/4</string>
    <string name="validate_pwd_title_email">更改绑定邮箱1/2</string>
    <string name="validate_pwd_account_phone_hint">请输入当前绑定手机号</string>
    <string name="validate_pwd_account_email_hint">请输入当前绑定邮箱</string>
    <string name="findpwd_new_pwd">新密码</string>
    <string name="mine_application_setting_text">应用设置</string>
    <string name="mine_wifi_text">非Wi-fi网络自动显示图片</string>
    <string name="mine_notification_text">推送通知</string>
    <string name="mine_clear_text">清除缓存</string>
    <string name="mine_other_text">其他</string>
    <string name="mine_check_update_text">检查更新</string>
    <string name="mine_about_text">关于iuniBBS</string>
    <string name="mine_exit_login_text">退出登录</string>
    <string name="mine_read_news">已读消息</string>
    <string name="mine_unread_news">未读消息</string>
    <string name="mine_all_news">全部消息</string>
    <string name="about_version">IUNI VOICE 1.0</string>
    <string name="about_info">IUNI Voice是U友在线产品交流，资源分享，随手摄影，畅谈八卦等互动平台。</string>
    <string name="about_weixin">微信</string>
    <string name="about_weixin_content">iunimobi</string>
    <string name="about_weibo">微博</string>
    <string name="about_weibo_content">\u0040iuni手机 \u0040iuni_OS</string>
    <string name="about_community_net">社区官网</string>
    <string name="about_community_net_content">http://bbs.iuni.com</string>
    <string name="about_community_os_net">OS社区官网</string>
    <string name="about_community_os_net_content">http://bbs.iunios.com</string>
    <string name="about_copyright">copyright: IUNI 2015</string>
</resources>