<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_17" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_finish"
        android:layout_alignParentTop="true"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/cet_password_ly"
            style="@style/Account_Layout_Item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/common_bg_alone_selector" >
            
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Account_Layout_Item_TextView"
                android:layout_marginRight="10dp"
                android:text="@string/findpwd_new_pwd" />

            <com.aurora.iunivoice.widget.ClearableEditText
                android:id="@+id/cet_password"
                style="@style/Account_ClearableEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/register_please_input_pwd"
                android:maxLength="20" />
        </LinearLayout>

        <include layout="@layout/error_info_layout" />

        <TextView
            style="@style/Account_TextView_Tips"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_14"
            android:text="@string/register_password_tips" />
    </LinearLayout>

    <!-- <Button
        android:id="@+id/btn_finish"
        style="@style/Account.Button.Next"
        android:text="@string/finish"
        android:layout_alignParentBottom="true" /> -->

</RelativeLayout>